chore: add flavours